--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<mat-toolbar class="header">
+    <span>
+        <a>
+            <img src="assets/img/logo.png" alt="logo">
+        </a>
+    </span>
+
+</mat-toolbar>
