--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<mat-toolbar class="footer">
+    <span>
+        Desenvolvido com 
+        <i class="material-icons red v-middle">
+            favorite
+        </i>
+        por <strong>Code<span class="red">Runner</span></strong>
+    </span>
+</mat-toolbar>
