--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -1,22 +1,26 @@
 <mat-sidenav-container class="container">
-    <mat-sidenav class="sidenav" mode="side" opened 
-        fixedInViewport="true" fixedTopGap="64">
+    <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true"
+    fixedTopGap="65">
         <mat-nav-list class="nav-list">
-            <a mat-list-item routerLink="/">
+            <a mat-list-item>
                 <i class="material-icons">
                     home
                 </i>
-                <span class="nav-text">Início</span>
+                <strong> <br>Inicio</strong>
             </a>
-            <a mat-list-item  routerLink="/products">
+            <br>
+            <br>
+            <a mat-list-item>
                 <i class="material-icons">
                     storefront
                 </i>
-                <span class="nav-text">Produtos</span>
+               <strong>  <br>Produtos </strong> 
             </a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content">
-        <router-outlet></router-outlet>
+        <app-home>
+
+        </app-home>
     </mat-sidenav-content>
 </mat-sidenav-container>
